--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
   <title>Hello, World</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <h1>Hello, <i class="fa fa-globe"></i></h1>
-  
+  <h1>Hello, </h1>
+  <div ui-view>{{ 5 + 5 }}</div>
+
   <script src="js/main.js"></script>
 </body>
 </html>
