--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  
-  <div ui-view>{{ 10 + 10 }}</div>
+  <div class="content" ui-view>{{ 10 + 10 }}</div>
 
   <script src="js/main.js"></script>
 </body>
